[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fastimport"
description = "VCS fastimport/fastexport parser"
authors = [{name = "Canonical Ltd", email = "bazaar@lists.canonical.com"}]
maintainers = [{name = "Jelmer Vernooij", email = "jelmer@jelmer.uk"}]
license = {text = "GNU GPL v2 or later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Version Control",
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/jelmer/python-fastimport"
Repository = "https://github.com/jelmer/python-fastimport"

[tool.setuptools]
packages = [
    "fastimport",
    "fastimport.processors",
]
script-files = [
    "bin/fast-import-query",
    "bin/fast-import-filter",
    "bin/fast-import-info",
]
include-package-data = false

[tool.setuptools.package-data]
fastimport = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "fastimport.__version__"}

[tool.distutils.bdist_wheel]
universal = 1

[tool.mypy]
packages = ["fastimport"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
