[metadata]
name = fastimport
author = Canonical Ltd
author_email = bazaar@lists.canonical.com
maintainer = Jelmer Vernooĳ
maintainer_email = jelmer@jelmer.uk
summary = VCS fastimport/fastexport parser
home-page = https://github.com/jelmer/python-fastimport
license = file:COPYING
description-file = README.md
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Topic :: Software Development :: Version Control
