[metadata]
name = fastimport
description = VCS fastimport/fastexport parser
version = attr:fastimport.__version__
author = Canonical Ltd
author_email = bazaar@lists.canonical.com
maintainer = Jelmer Vernooij
maintainer_email = jelmer@jelmer.uk
license = GNU GPL v2 or later
url = https://github.com/jelmer/python-fastimport
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Topic :: Software Development :: Version Control
description_file = README.md

[options]
packages =
    fastimport
    fastimport.processors
python_requires = >=3.6
scripts =
    bin/fast-import-query
    bin/fast-import-filter
    bin/fast-import-info

[bdist_wheel]
universal = 1
